--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "6.8.96" !default;
+$mdi-version:          "6.9.96" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -33,6 +33,8 @@ $mdi-icons: (
   "account-arrow-right-outline": F0B54,
   "account-arrow-up": F1867,
   "account-arrow-up-outline": F186A,
+  "account-badge": F1B0A,
+  "account-badge-outline": F1B0B,
   "account-box": F0006,
   "account-box-multiple": F0934,
   "account-box-multiple-outline": F100A,
@@ -93,6 +95,8 @@ $mdi-icons: (
   "account-music": F0803,
   "account-music-outline": F0CE9,
   "account-network": F0011,
+  "account-network-off": F1AF1,
+  "account-network-off-outline": F1AF2,
   "account-network-outline": F0BE6,
   "account-off": F0012,
   "account-off-outline": F0BE7,
@@ -683,6 +687,7 @@ $mdi-icons: (
   "baby-bottle": F0F39,
   "baby-bottle-outline": F0F3A,
   "baby-buggy": F13E0,
+  "baby-buggy-off": F1AF3,
   "baby-carriage": F068F,
   "baby-carriage-off": F0FA0,
   "baby-face": F0E7C,
@@ -710,6 +715,8 @@ $mdi-icons: (
   "bag-personal-off": F0E11,
   "bag-personal-off-outline": F0E12,
   "bag-personal-outline": F0E13,
+  "bag-personal-tag": F1B0C,
+  "bag-personal-tag-outline": F1B0D,
   "bag-suitcase": F158B,
   "bag-suitcase-off": F158D,
   "bag-suitcase-off-outline": F158E,
@@ -1073,6 +1080,7 @@ $mdi-icons: (
   "border-none": F00CD,
   "border-none-variant": F08A4,
   "border-outside": F00CE,
+  "border-radius": F1AF4,
   "border-right": F00CF,
   "border-right-variant": F08A5,
   "border-style": F00D0,
@@ -1165,6 +1173,12 @@ $mdi-icons: (
   "bug-check": F0A2E,
   "bug-check-outline": F0A2F,
   "bug-outline": F0A30,
+  "bug-pause": F1AF5,
+  "bug-pause-outline": F1AF6,
+  "bug-play": F1AF7,
+  "bug-play-outline": F1AF8,
+  "bug-stop": F1AF9,
+  "bug-stop-outline": F1AFA,
   "bugle": F0DB4,
   "bulkhead-light": F1A2F,
   "bulldozer": F0B22,
@@ -1195,6 +1209,8 @@ $mdi-icons: (
   "bus-stop-uncovered": F1014,
   "butterfly": F1589,
   "butterfly-outline": F158A,
+  "button-cursor": F1B4F,
+  "button-pointer": F1B50,
   "cabin-a-frame": F188C,
   "cable-data": F1394,
   "cached": F00E8,
@@ -1248,6 +1264,7 @@ $mdi-icons: (
   "calendar-remove-outline": F0C45,
   "calendar-search": F094C,
   "calendar-star": F09D3,
+  "calendar-star-outline": F1B53,
   "calendar-start": F166D,
   "calendar-sync": F0E8E,
   "calendar-sync-outline": F0E8F,
@@ -1594,6 +1611,7 @@ $mdi-icons: (
   "checkbox-blank-off-outline": F12ED,
   "checkbox-blank-outline": F0131,
   "checkbox-intermediate": F0856,
+  "checkbox-intermediate-variant": F1B54,
   "checkbox-marked": F0132,
   "checkbox-marked-circle": F0133,
   "checkbox-marked-circle-outline": F0134,
@@ -1663,6 +1681,7 @@ $mdi-icons: (
   "chili-off-outline": F17EF,
   "chip": F061A,
   "church": F0144,
+  "church-outline": F1B02,
   "cigar": F1189,
   "cigar-off": F141B,
   "circle": F0765,
@@ -1982,11 +2001,15 @@ $mdi-icons: (
   "content-save-cog-outline": F145C,
   "content-save-edit": F0CFB,
   "content-save-edit-outline": F0CFC,
+  "content-save-minus": F1B43,
+  "content-save-minus-outline": F1B44,
   "content-save-move": F0E27,
   "content-save-move-outline": F0E28,
   "content-save-off": F1643,
   "content-save-off-outline": F1644,
   "content-save-outline": F0818,
+  "content-save-plus": F1B41,
+  "content-save-plus-outline": F1B42,
   "content-save-settings": F061B,
   "content-save-settings-outline": F0B2E,
   "contrast": F0195,
@@ -2251,6 +2274,8 @@ $mdi-icons: (
   "delta": F01C2,
   "desk": F1239,
   "desk-lamp": F095F,
+  "desk-lamp-off": F1B1F,
+  "desk-lamp-on": F1B20,
   "deskphone": F01C3,
   "desktop-classic": F07C0,
   "desktop-mac": F01C4,
@@ -2431,6 +2456,8 @@ $mdi-icons: (
   "eiffel-tower": F156B,
   "eight-track": F09EA,
   "eject": F01EA,
+  "eject-circle": F1B23,
+  "eject-circle-outline": F1B24,
   "eject-outline": F0B91,
   "electric-switch": F0E9F,
   "electric-switch-closed": F10D9,
@@ -2631,9 +2658,12 @@ $mdi-icons: (
   "fast-forward-10": F0D71,
   "fast-forward-15": F193A,
   "fast-forward-30": F0D06,
+  "fast-forward-45": F1B12,
   "fast-forward-5": F11F8,
   "fast-forward-60": F160B,
   "fast-forward-outline": F06D2,
+  "faucet": F1B29,
+  "faucet-variant": F1B2A,
   "fax": F0212,
   "feather": F06D3,
   "feature-search": F0A49,
@@ -2799,6 +2829,7 @@ $mdi-icons: (
   "file-word-box": F022D,
   "file-word-box-outline": F103D,
   "file-word-outline": F103E,
+  "file-xml-box": F1B4B,
   "film": F022F,
   "filmstrip": F0230,
   "filmstrip-box": F0332,
@@ -2876,8 +2907,11 @@ $mdi-icons: (
   "flash-alert-outline": F0EF8,
   "flash-auto": F0242,
   "flash-off": F0243,
+  "flash-off-outline": F1B45,
   "flash-outline": F06D5,
   "flash-red-eye": F067B,
+  "flash-triangle": F1B1D,
+  "flash-triangle-outline": F1B1E,
   "flashlight": F0244,
   "flashlight-off": F0245,
   "flask": F0093,
@@ -2983,6 +3017,8 @@ $mdi-icons: (
   "folder-lock-outline": F1AA8,
   "folder-marker": F126D,
   "folder-marker-outline": F126E,
+  "folder-minus": F1B49,
+  "folder-minus-outline": F1B4A,
   "folder-move": F0252,
   "folder-move-outline": F1246,
   "folder-multiple": F0253,
@@ -3113,7 +3149,9 @@ $mdi-icons: (
   "format-letter-ends-with": F0FB8,
   "format-letter-matches": F0FB9,
   "format-letter-spacing": F1956,
+  "format-letter-spacing-variant": F1AFB,
   "format-letter-starts-with": F0FBA,
+  "format-line-height": F1AFC,
   "format-line-spacing": F0278,
   "format-line-style": F05C8,
   "format-line-weight": F05C9,
@@ -3132,6 +3170,7 @@ $mdi-icons: (
   "format-page-split": F1917,
   "format-paint": F027C,
   "format-paragraph": F027D,
+  "format-paragraph-spacing": F1AFD,
   "format-pilcrow": F06D8,
   "format-quote-close": F027E,
   "format-quote-close-outline": F11A8,
@@ -3271,6 +3310,7 @@ $mdi-icons: (
   "gate-and": F08E1,
   "gate-arrow-left": F17F7,
   "gate-arrow-right": F1169,
+  "gate-buffer": F1AFE,
   "gate-nand": F08E2,
   "gate-nor": F08E3,
   "gate-not": F08E4,
@@ -3697,6 +3737,8 @@ $mdi-icons: (
   "image-auto-adjust": F0FC1,
   "image-broken": F02ED,
   "image-broken-variant": F02EE,
+  "image-check": F1B25,
+  "image-check-outline": F1B26,
   "image-edit": F11E3,
   "image-edit-outline": F11E4,
   "image-filter-black-white": F02F0,
@@ -3716,6 +3758,7 @@ $mdi-icons: (
   "image-marker": F177B,
   "image-marker-outline": F177C,
   "image-minus": F1419,
+  "image-minus-outline": F1B47,
   "image-move": F09F8,
   "image-multiple": F02F9,
   "image-multiple-outline": F02EF,
@@ -3723,9 +3766,11 @@ $mdi-icons: (
   "image-off-outline": F11D1,
   "image-outline": F0976,
   "image-plus": F087C,
+  "image-plus-outline": F1B46,
   "image-refresh": F19FE,
   "image-refresh-outline": F19FF,
   "image-remove": F1418,
+  "image-remove-outline": F1B48,
   "image-search": F0977,
   "image-search-outline": F0978,
   "image-size-select-actual": F0C8D,
@@ -4172,6 +4217,8 @@ $mdi-icons: (
   "medal-outline": F1326,
   "medical-bag": F06EF,
   "medical-cotton-swab": F1AB8,
+  "medication": F1B14,
+  "medication-outline": F1B15,
   "meditation": F117B,
   "memory": F035B,
   "menorah": F17D4,
@@ -4372,6 +4419,7 @@ $mdi-icons: (
   "motion-sensor-off": F1435,
   "motorbike": F037C,
   "motorbike-electric": F15BA,
+  "motorbike-off": F1B16,
   "mouse": F037D,
   "mouse-bluetooth": F098B,
   "mouse-move-down": F1550,
@@ -4718,10 +4766,12 @@ $mdi-icons: (
   "owl": F03D2,
   "pac-man": F0BAF,
   "package": F03D3,
+  "package-check": F1B51,
   "package-down": F03D4,
   "package-up": F03D5,
   "package-variant": F03D6,
   "package-variant-closed": F03D7,
+  "package-variant-closed-check": F1B52,
   "package-variant-closed-minus": F19D4,
   "package-variant-closed-plus": F19D5,
   "package-variant-closed-remove": F19D6,
@@ -4877,6 +4927,8 @@ $mdi-icons: (
   "phone-in-talk": F03F6,
   "phone-in-talk-outline": F1182,
   "phone-incoming": F03F7,
+  "phone-incoming-outgoing": F1B3F,
+  "phone-incoming-outgoing-outline": F1B40,
   "phone-incoming-outline": F1193,
   "phone-lock": F03F8,
   "phone-lock-outline": F1194,
@@ -4930,6 +4982,7 @@ $mdi-icons: (
   "piggy-bank": F1007,
   "piggy-bank-outline": F1679,
   "pill": F0402,
+  "pill-multiple": F1B4C,
   "pill-off": F1A5C,
   "pillar": F0702,
   "pin": F0403,
@@ -4952,6 +5005,8 @@ $mdi-icons: (
   "piston": F088A,
   "pitchfork": F1553,
   "pizza": F0409,
+  "plane-car": F1AFF,
+  "plane-train": F1B00,
   "play": F040A,
   "play-box": F127A,
   "play-box-lock": F1A16,
@@ -5063,7 +5118,10 @@ $mdi-icons: (
   "printer-3d-nozzle-alert-outline": F11C1,
   "printer-3d-nozzle-heat": F18B8,
   "printer-3d-nozzle-heat-outline": F18B9,
+  "printer-3d-nozzle-off": F1B19,
+  "printer-3d-nozzle-off-outline": F1B1A,
   "printer-3d-nozzle-outline": F0E5C,
+  "printer-3d-off": F1B0E,
   "printer-alert": F042C,
   "printer-check": F1146,
   "printer-eye": F1458,
@@ -5104,6 +5162,7 @@ $mdi-icons: (
   "publish-off": F1945,
   "pulse": F0430,
   "pump": F1402,
+  "pump-off": F1B22,
   "pumpkin": F0BBF,
   "purse": F0F1C,
   "purse-outline": F0F1D,
@@ -5283,6 +5342,7 @@ $mdi-icons: (
   "rewind-10": F0D2A,
   "rewind-15": F1946,
   "rewind-30": F0D96,
+  "rewind-45": F1B13,
   "rewind-5": F11F9,
   "rewind-60": F160C,
   "rewind-outline": F070A,
@@ -5625,6 +5685,8 @@ $mdi-icons: (
   "sign-direction-minus": F1000,
   "sign-direction-plus": F0FDC,
   "sign-direction-remove": F0FDD,
+  "sign-language": F1B4D,
+  "sign-language-outline": F1B4E,
   "sign-pole": F14F8,
   "sign-real-estate": F1118,
   "sign-text": F0782,
@@ -5822,6 +5884,7 @@ $mdi-icons: (
   "spade": F0E65,
   "speaker": F04C3,
   "speaker-bluetooth": F09A2,
+  "speaker-message": F1B11,
   "speaker-multiple": F0D38,
   "speaker-off": F04C4,
   "speaker-wireless": F071F,
@@ -5870,6 +5933,7 @@ $mdi-icons: (
   "stack-overflow": F04CC,
   "stackpath": F0359,
   "stadium": F0FF9,
+  "stadium-outline": F1B03,
   "stadium-variant": F0720,
   "stairs": F04CD,
   "stairs-box": F139E,
@@ -5988,6 +6052,8 @@ $mdi-icons: (
   "subway-alert-variant": F0D9D,
   "subway-variant": F04DF,
   "summit": F0786,
+  "sun-angle": F1B27,
+  "sun-angle-outline": F1B28,
   "sun-clock": F1A77,
   "sun-clock-outline": F1A78,
   "sun-compass": F19A5,
@@ -6027,6 +6093,8 @@ $mdi-icons: (
   "syllabary-katakana-halfwidth": F1336,
   "symbol": F1501,
   "symfony": F0AE6,
+  "synagogue": F1B04,
+  "synagogue-outline": F1B05,
   "sync": F04E6,
   "sync-alert": F04E7,
   "sync-circle": F1378,
@@ -6076,6 +6144,7 @@ $mdi-icons: (
   "table-picnic": F1743,
   "table-pivot": F183C,
   "table-plus": F0A75,
+  "table-question": F1B21,
   "table-refresh": F13A0,
   "table-remove": F0A76,
   "table-row": F0837,
@@ -6153,10 +6222,16 @@ $mdi-icons: (
   "television-pause": F0F89,
   "television-play": F0ECF,
   "television-shimmer": F1110,
+  "television-speaker": F1B1B,
+  "television-speaker-off": F1B1C,
   "television-stop": F0F8A,
   "temperature-celsius": F0504,
   "temperature-fahrenheit": F0505,
   "temperature-kelvin": F0506,
+  "temple-buddhist": F1B06,
+  "temple-buddhist-outline": F1B07,
+  "temple-hindu": F1B08,
+  "temple-hindu-outline": F1B09,
   "tennis": F0DA0,
   "tennis-ball": F0507,
   "tent": F0508,
@@ -6197,6 +6272,7 @@ $mdi-icons: (
   "theme-light-dark": F050E,
   "thermometer": F050F,
   "thermometer-alert": F0E01,
+  "thermometer-auto": F1B0F,
   "thermometer-bluetooth": F1895,
   "thermometer-check": F1A7F,
   "thermometer-chevron-down": F0E02,
@@ -6207,9 +6283,13 @@ $mdi-icons: (
   "thermometer-minus": F0E04,
   "thermometer-off": F1531,
   "thermometer-plus": F0E05,
+  "thermometer-probe": F1B2B,
+  "thermometer-probe-off": F1B2C,
   "thermometer-water": F1A80,
   "thermostat": F0393,
+  "thermostat-auto": F1B17,
   "thermostat-box": F0891,
+  "thermostat-box-auto": F1B18,
   "thought-bubble": F07F6,
   "thought-bubble-outline": F07F7,
   "thumb-down": F0511,
@@ -6355,6 +6435,7 @@ $mdi-icons: (
   "toy-brick-search": F1292,
   "toy-brick-search-outline": F1293,
   "track-light": F0914,
+  "track-light-off": F1B01,
   "trackpad": F07F8,
   "trackpad-lock": F0933,
   "tractor": F0892,
@@ -6365,10 +6446,28 @@ $mdi-icons: (
   "traffic-light-outline": F182A,
   "train": F052C,
   "train-car": F0BD8,
+  "train-car-autorack": F1B2D,
+  "train-car-box": F1B2E,
+  "train-car-box-full": F1B2F,
+  "train-car-box-open": F1B30,
+  "train-car-caboose": F1B31,
+  "train-car-centerbeam": F1B32,
+  "train-car-centerbeam-full": F1B33,
+  "train-car-container": F1B34,
+  "train-car-flatbed": F1B35,
+  "train-car-flatbed-car": F1B36,
+  "train-car-flatbed-tank": F1B37,
+  "train-car-gondola": F1B38,
+  "train-car-gondola-full": F1B39,
+  "train-car-hopper": F1B3A,
+  "train-car-hopper-covered": F1B3B,
+  "train-car-hopper-full": F1B3C,
+  "train-car-intermodal": F1B3D,
   "train-car-passenger": F1733,
   "train-car-passenger-door": F1734,
   "train-car-passenger-door-open": F1735,
   "train-car-passenger-variant": F1736,
+  "train-car-tank": F1B3E,
   "train-variant": F08C4,
   "tram": F052D,
   "tram-side": F0FE7,
@@ -6643,6 +6742,7 @@ $mdi-icons: (
   "volcano": F1A83,
   "volcano-outline": F1A84,
   "volleyball": F09B4,
+  "volume-equal": F1B10,
   "volume-high": F057E,
   "volume-low": F057F,
   "volume-medium": F0580,
